# MonoDepthROS

./: .gitignore  .gitmodules
.catkin_tools/profiles/default/: devel_collisions.txt
cfg/: rviz.rviz
depth_inference/: CMakeLists.txt  package.xml
depth_inference/cfg/: config.yaml  robot.xacro  rviz.rviz
depth_inference/include/: base_model.hpp  context.hpp  definitions.h  depth_node.hpp  model_reader.hpp  models.hpp  optimizer.hpp
depth_inference/launch/: depthOnly.launch.py  run.launch.py
depth_inference/scripts/: bag2pcd.py  odometry.py
depth_inference/src/: context.cpp  depth_node.cpp  mapper_node.cpp  model_reader.cpp  models.cpp  optimizer.cpp  optimizer_node.cpp  utils.cpp
depth_inference/urdf/: robot.urdf.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/depth_inference/share/ament_index/resource_index/package_run_dependencies/: depth_inference
install/depth_inference/share/ament_index/resource_index/parent_prefix_path/: depth_inference
install/depth_inference/share/depth_inference/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/depth_inference/share/depth_inference/cmake/: depth_inferenceConfig.cmake
install/depth_inference/share/depth_inference/launch/: run.launch.py
log/: latest_build
logs/robot_depth_estimation/: build.check.004.log.stderr  build.check.005.log.stderr  build.check.021.log.stderr  build.check.033.log.stderr  build.check.036.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.011.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.023.log.stderr  build.make.025.log.stderr  build.make.028.log.stderr  build.make.030.log.stderr
src/robot_depth_estimation/: CMakeLists.txt  package.xml
src/robot_depth_estimation/cfg/: rviz.rviz
src/robot_depth_estimation/include/: depth_infer.hpp
src/robot_depth_estimation/launch/: depth_gazebo.launch  depth_rviz.launch
src/robot_depth_estimation/models/: robot.urdf
src/robot_depth_estimation/src/: depth_estimation_node.cpp  depth_infer.cpp
src/robot_depth_estimation/worlds/: small_city.world
