<?xml version="1.0"?>
<package format="3">
  <name>depth_inference</name>
  <version>0.1.0</version>
  <description>A ROS 2 package for SLAM using ONNX, OpenCV, and CUDA.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>onnxruntime</depend>
  <depend>opencv</depend>
  <depend>cuda</depend>

  <build_depend>ament_cmake</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
